--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h1>Фотограф в Рязани — Витале Якимо</h1>
 			<p>Портретная и семейная фотосъёмка</p>
 			<div class="hero-nav">
-				<a href="/booking.html" class="hero-nav-link">Записаться</a>
+				<!--<a href="/booking.html" class="hero-nav-link">Записаться</a>-->
 				<a href="#portfolios" class="hero-nav-link">Портфолио</a>
 				<a href="/prices.html" class="hero-nav-link">Цены</a>
 				<a href="/about.html" class="hero-nav-link">Обо мне</a>
@@ -39,7 +39,7 @@
 
 		<section class="contact-footer" aria-labelledby="contact-heading">
 			<h2 style="font-size: 1.8rem; margin-bottom: 20px;">Связаться</h2>
-			<p><a href="/booking.html" style="color: #4fc3f7; text-decoration: none;">📅 Записаться на съёмку</a></p>
+			<!--<p><a href="/booking.html" style="color: #4fc3f7; text-decoration: none;">📅 Записаться на съёмку</a></p>-->
 			<p>📧 <a href="mailto:bv72006@ya.ru" style="color: #4fc3f7; text-decoration: none;">bv72006@ya.ru</a></p>
 			<p>📱 <a href="tel:+79194545542" style="color: #4fc3f7; text-decoration: none;">+7 (919) 454-55-42</a></p>
 			<p>💬 <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer" style="color: #4fc3f7; text-decoration: none;">Telegram (@vyakimo)</a></p>
@@ -47,7 +47,7 @@
 
 			<div class="footer-nav">
 				<a href="/" class="footer-nav-link">Портфолио</a>
-				<a href="/booking.html" class="hero-nav-link">Записаться</a>
+				<!--<a href="/booking.html" class="hero-nav-link">Записаться</a>-->
 				<a href="/about.html" class="footer-nav-link">Обо мне</a>
 				<a href="/prices.html" class="footer-nav-link">Цены</a>
 				<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
